--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,12 @@ dependencies {
     })
     //可以单独使用，不需要依赖下方的扩展包
     //扩展了下载管理和上传管理，根据需要添加
+    //必须使用
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
-    compile 'com.lzy.net:okhttputils:+'
-    compile 'com.lzy.net:okhttpserver:+'
+    compile 'com.lzy.net:okgo:3.0.4'
+    compile 'com.lzy.net:okserver:2.0.5'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     testCompile 'junit:junit:4.12'
 }
