--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.aygames.twomonth.ay_box"
+        applicationId "com.aygames.twomonth.aybox"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -14,14 +14,13 @@ android {
 
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
-            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
         }
 
         manifestPlaceholders = [
-                JPUSH_PKGNAME : applicationId,
+                JPUSH_PKGNAME: applicationId,
                 JPUSH_APPKEY : "2a1c6b96a4ccb4ee942179bf", //JPush上注册的包名对应的appkey.
-                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
         ]
 
     }
@@ -41,13 +40,15 @@ dependencies {
     //可以单独使用，不需要依赖下方的扩展包
     //扩展了下载管理和上传管理，根据需要添加
     //必须使用
+    // 此处以JPush 3.1.1 版本为例。
+    // 此处以JCore 1.1.9 版本为例。
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
     compile 'com.lzy.net:okgo:3.0.4'
     compile 'com.lzy.net:okserver:2.0.5'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'cn.jiguang.sdk:jpush:3.1.1'  // 此处以JPush 3.1.1 版本为例。
-    compile 'cn.jiguang.sdk:jcore:1.1.9'  // 此处以JCore 1.1.9 版本为例。
+    compile 'cn.jiguang.sdk:jpush:3.1.1'
+    compile 'cn.jiguang.sdk:jcore:1.1.9'
     testCompile 'junit:junit:4.12'
 }
