--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.READ_SMS" />
 
     <!-- 读取手机号码权限 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- Required -->
     <permission
         android:name="com.aygames.twomonth.aybox.permission.JPUSH_MESSAGE"
@@ -164,7 +164,16 @@
 
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.ChangeActivity"></activity>
+        <activity android:name=".activity.ChangeActivity" />
+        <activity
+            android:name=".activityfb.GiftActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".activityfb.WaiterActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".activityfb.RebateActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
