BT游戏首页界面修改 BT游戏首页数据获取 BT游戏下一级游戏界面构思

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -176,7 +176,8 @@
             android:exported="true" />
         <activity
             android:name=".activityfb.ShareActivity"
-            android:exported="true"/>
+            android:exported="true" />
+        <activity android:name=".activity.GameActivity"></activity>
     </application>
 
 </manifest>
