--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'cn.jiguang.sdk:jpush:3.1.1'
     compile 'cn.jiguang.sdk:jcore:1.1.9'
+    //轮播图框架
+    compile 'com.bigkoo:convenientbanner:2.0.5'
     testCompile 'junit:junit:4.12'
 }
