开服页面修改 下载器实现下载功能，但是没有下载器界面，监听下载进度等 下载完成后自动安装功能未实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -177,7 +177,9 @@
         <activity
             android:name=".activityfb.ShareActivity"
             android:exported="true" />
-        <activity android:name=".activity.GameActivity"></activity>
+        <activity android:name=".activity.GameActivity" />
+        <activity android:name=".activity.TestActivity" />
+        <activity android:name=".activity.DownloadingActivity"></activity>
     </application>
 
 </manifest>
