--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -179,7 +179,8 @@
             android:exported="true" />
         <activity android:name=".activity.GameActivity" />
         <activity android:name=".activity.TestActivity" />
-        <activity android:name=".activity.DownloadingActivity"></activity>
+        <activity android:name=".activity.DownloadingActivity" />
+        <activity android:name=".activity.NewsActivity"></activity>
     </application>
 
 </manifest>
