2018/02/02 游戏中心页面修改变更

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:7.0.1'
     testCompile 'junit:junit:4.12'
+    //下拉刷新recycleview
+    compile 'com.wuxiaolong.pullloadmorerecyclerview:library:1.1.2'
 }
