--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -181,7 +181,7 @@
         <activity android:name=".activity.TestActivity" />
         <activity android:name=".activity.DownloadingActivity" />
         <activity android:name=".activity.NewsActivity" />
-        <activity android:name=".activity.GiftOneActivity"></activity>
+        <activity android:name=".activity.GiftOneActivity" />
     </application>
 
 </manifest>
