2018/02/10 返利功能基础流程

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -182,6 +182,7 @@
         <activity android:name=".activity.DownloadingActivity" />
         <activity android:name=".activity.NewsActivity" />
         <activity android:name=".activity.GiftOneActivity" />
+        <activity android:name=".activity.RebateOrderActivity"></activity>
     </application>
 
 </manifest>
