2018/03/13 满V游戏完成效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -181,9 +181,12 @@
         <activity android:name=".activity.TestActivity" />
         <activity android:name=".activity.DownloadingActivity" />
         <activity android:name=".activity.NewsActivity" />
-        <activity android:name=".activity.GiftOneActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.RebateOrderActivity"></activity>
+        <activity
+            android:name=".activity.GiftOneActivity"
+            android:exported="true" />
+        <activity android:name=".activity.RebateOrderActivity" />
+        <activity android:name=".activity.BTgameActivity" />
+        <activity android:name=".activity.ManVActivity"></activity>
     </application>
 
 </manifest>
