--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.aygames.twomonth.aybox">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -43,7 +44,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:replace="android:name">
 
         <!-- 闪屏页面 -->
         <activity
@@ -155,7 +157,7 @@
             android:name="JPUSH_APPKEY"
             android:value="2a1c6b96a4ccb4ee942179bf" />
 
-        <activity android:name=".activity.UserActivity" />
+
 
         <service
             android:name=".service.AyboxService"
